--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Garfield's THPS Archive</h1>
-    <p>test</p>
+    <p>Welcome to my THPS archive, you will be able to find THUG2/THUGPro Create a Skaters, Create a Parks, save files, and more!</p>
   </body>
 </html>
