--- a/thugpro.html
+++ b/thugpro.html
@@ -1,1 +1,11 @@
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>THUG Pro Archive</title>
+  </head>
+  <body>
+    <h1>THUG Pro Archive</h1>
+    <a href="/Garfield.SKA">Garfield Skater</a>
+  </body>
+</html>
