--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Garfield's THPS Archive</h1>
     <p>Welcome to my THPS archive, you will be able to find THPS Create a Skaters, Create a Parks, save files, and more!</p>
+    <a href="/thugpro.html">THUG Pro files</a>
   </body>
 </html>
