--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Garfield's THPS Archive</h1>
-    <p>Welcome to my THPS archive, you will be able to find THPS Create a Skaters, Create a Parks, save files, and more!</p>
+    <p>Welcome to my THPS archive, you will be able to find THPS Create a Skaters, Create a Parks, save files, and more! This will be frequently updated with new content. Bookmark this site!</p>
     <a href="/thugpro.html">THUG Pro files</a>
   </body>
 </html>
