--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Garfield's THPS Archive (W.I.P)</h1>
     <p>Welcome to my THPS archive, you will be able to find THPS Create a Skaters, Create a Parks, save files, and more! This will be frequently updated with new content. Bookmark this site!</p>
-    <a href="https://www.youtube.com/channel/UCAFXkzwildTUrB4fRsVNRKA">YouTube Channel</a>
+    <a href="https://www.youtube.com/channel/UCAFXkzwildTUrB4fRsVNRKA">YouTube Channel (You can find previews so you know what you're downloading)</a>
     <a href="/thugpro.html">THUG Pro files</a>
     <a href="/thug2.html">THUG 2 files</a>
   </body>
