--- a/thug2.html
+++ b/thug2.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>THUG 2 Archive</h1>
-    <p>There's nothing here yet!</p>
+    <p>There's nothing here yet! Come back later.</p>
   </body>
 </html>
