--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <body>
     <h1>Garfield's THPS Archive (W.I.P)</h1>
     <p>Welcome to my THPS archive, you will be able to find THPS Create a Skaters, Create a Parks, save files, and more! This will be frequently updated with new content. Bookmark this site!</p>
-    <a href="https://www.youtube.com/channel/UCAFXkzwildTUrB4fRsVNRKA">YouTube Channel (You can find previews so you know what you're downloading)</a>
-    <a href="/thugpro.html">THUG Pro files</a>
-    <a href="/thug2.html">THUG 2 files</a>
+    <a href="https://www.youtube.com/playlist?list=PLIXVzPPzAnp941J9zLyw4A9RRYFbm_0MZ">THUGPro CAS Previews</a>
+    <a href="/thug1.html">THUG1 files</a>
+    <a href="/thug2.html">THUG2 files</a>
+    <a href="/thaw.html">THAW files</a>
+    <a href="/thp8.html">THP8 files</a>
+    <a href="/thps1plus2.html">THPS1+2 files</a>
+    <a href="/thugpro.html">THUGPro files</a>
   </body>
 </html>
