--- a/thugpro.html
+++ b/thugpro.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>THUG Pro Archive</h1>
+    <p>Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
     <a href="/Garfield.SKA">Garfield Skater</a>
   </body>
 </html>
