--- a/thugpro.html
+++ b/thugpro.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1>THUG Pro Archive</h1>
-    <p>Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
-    <a href="/Garfield.SKA">Garfield Skater</a>
+    <p>NOTE: You will have to rebind special tricks. Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
+    <a href="/Garfield.SKA">Garfield (Skater)</a>
+    <a href="/Jon Arbuckle.SKA">Jon Arbuckle (Skater)</a>
   </body>
 </html>
