--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Garfield's THPS Archive (W.I.P)</h1>
     <p>Welcome to my THPS archive, you will be able to find THPS Create a Skaters, Create a Parks, save files, and more! This will be frequently updated with new content. Bookmark this site!</p>
-    <a href="https://www.youtube.com/playlist?list=PLIXVzPPzAnp941J9zLyw4A9RRYFbm_0MZ">File Previews</a>
+    <a href="/preview.html">File Previews</a>
     <a href="/thug1.html">THUG1 files</a>
     <a href="/thug2.html">THUG2 files</a>
     <a href="/thaw.html">THAW files</a>
