--- a/preview.html
+++ b/preview.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>File Previews</h1>
-    <a href="/preview.html">THUG Pro Skater Previews</a>
+    <a href="https://www.youtube.com/playlist?list=PLIXVzPPzAnp941J9zLyw4A9RRYFbm_0MZ">THUG Pro Skater Previews</a>
   </body>
 </html>
