--- a/thugpro.html
+++ b/thugpro.html
@@ -10,5 +10,6 @@
     <a href="/Garfield.SKA">Garfield (Skater)</a>
     <a href="/Odie.SKA">Odie (Skater)</a>
     <a href="/Jon Arbuckle.SKA">Jon Arbuckle (Skater)</a>
+    <a href="/Ricky Berwick.SKA">Ricky Berwick (Skater)</a>
   </body>
 </html>
