fixed grammar error

--- a/thug2.html
+++ b/thug2.html
@@ -5,7 +5,7 @@
     <title>THUG 2 Archive</title>
   </head>
   <body>
-    <h1>THUG 2 Archive</h1>
+    <h1>THUG2 Archive</h1>
     <p>There's nothing here yet! Come back later.</p>
   </body>
 </html>
