--- a/thugprocas.html
+++ b/thugprocas.html
@@ -8,10 +8,16 @@
     <h1>THUG Pro Create a Skater Archive</h1>
     <p>NOTE: You will have to rebind special tricks. Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
     <a href="/Garfield.SKA">Garfield</a>
+    <p>The big-boned orange cat is now in THUG Pro! Created by Garfield</p>
     <a href="/Odie.SKA">Odie</a>
+    <p>Garfield's dog brother, Odie. Created by Garfield</p>
     <a href="/Jon Arbuckle.SKA">Jon Arbuckle</a>
+    <p>Garfield's owner, Jon. Created by Garfield</p>
     <a href="/Bart Simpson.SKA">Bart Simpson</a>
+    <p>Bart Simpson from the TV show 'The Simpsons'. Created by Garfield</p>
     <a href="/Peter Griffin.SKA">Peter Griffin</a>
+    <p>A CAS I'm very proud of. Created by Garfield</p>
     <a href="/Ricky Berwick.SKA">Ricky Berwick</a>
+    <p>The famous handicapped YouTuber. Created by Garfield</p>
   </body>
 </html>
