--- a/thugprocas.html
+++ b/thugprocas.html
@@ -16,7 +16,9 @@
     <a href="/Bart Simpson.SKA">Bart Simpson</a>
     <p>Bart Simpson from the TV show 'The Simpsons'. Created by Garfield</p>
     <a href="/Peter Griffin.SKA">Peter Griffin</a>
-    <p>A CAS I'm very proud of. Created by Garfield</p>
+    <p>Peter Griffin from the TV show 'Family Guy'. Created by Garfield</p>
+    <a href="/Caillou.SKA">Caillou</a>
+    <p>The famous bald 4 year old is back, and now in THUG Pro!</p>
     <a href="/Ricky Berwick.SKA">Ricky Berwick</a>
     <p>The famous handicapped YouTuber. Created by Garfield</p>
   </body>
