--- a/thugprocas.html
+++ b/thugprocas.html
@@ -7,8 +7,9 @@
   <body>
     <h1>THUG Pro Create a Skater Archive</h1>
     <p>NOTE: You will have to rebind special tricks. Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
-    <a href="/Garfield.SKA">Garfield</a>
+    <img src="submission1.png" />
     <p>The big-boned orange cat is now in THUG Pro! Created by Garfield</p>
+    <a href="/Garfield.SKA">Download Garfield</a>
     <a href="/Odie.SKA">Odie</a>
     <p>Garfield's dog brother, Odie. Created by Garfield</p>
     <a href="/Jon Arbuckle.SKA">Jon Arbuckle</a>
