BIG UPDATE, added images + obvious downloads

--- a/thugprocas.html
+++ b/thugprocas.html
@@ -7,20 +7,33 @@
   <body>
     <h1>THUG Pro Create a Skater Archive</h1>
     <p>NOTE: You will have to rebind special tricks. Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
-    <img src="submission1.png" />
+    <p>Garfield Skater</p>
+    <img src="submission1.png" alt="errorreading.png" />
     <p>The big-boned orange cat is now in THUG Pro! Created by Garfield</p>
     <a href="/Garfield.SKA">Download Garfield</a>
-    <a href="/Odie.SKA">Odie</a>
+    <p>Odie Skater</p>
+    <img src="submission2.png" alt="errorreading.png" />
     <p>Garfield's dog brother, Odie. Created by Garfield</p>
-    <a href="/Jon Arbuckle.SKA">Jon Arbuckle</a>
+    <a href="/Odie.SKA">Download Odie</a>
+    <p>Jon Arbuckle Skater</p>
+    <img src="submission3.png" alt="errorreading.png" />
     <p>Garfield's owner, Jon. Created by Garfield</p>
-    <a href="/Bart Simpson.SKA">Bart Simpson</a>
-    <p>Bart Simpson from the TV show 'The Simpsons'. Created by Garfield</p>
-    <a href="/Peter Griffin.SKA">Peter Griffin</a>
-    <p>Peter Griffin from the TV show 'Family Guy'. Created by Garfield</p>
-    <a href="/Caillou.SKA">Caillou</a>
-    <p>The famous bald 4 year old is back, and now in THUG Pro!</p>
-    <a href="/Ricky Berwick.SKA">Ricky Berwick</a>
-    <p>The famous handicapped YouTuber. Created by Garfield</p>
+    <a href="/Jon Arbuckle.SKA">Download Jon Arbuckle</a>
+    <p>Bart Simpson Skater</p>
+    <img src="submission4.png" alt="errorreading.png" />
+    <p>Homer Simpson's kid, Bart. Created by Garfield</p>
+    <a href="/Bart Simpson.SKA">Download Bart Simpson</a>
+    <p>Peter Griffin Skater</p>
+    <img src="submission5.png" alt="errorreading.png" />
+    <p>The main character of the TV show, Family Guy. Created by Garfield</p>
+    <a href="/Peter Griffin.SKA">Download Peter Griffin</a>
+    <p>Caillou Skater</p>
+    <img src="submission6.png" alt="errorreading.png" />
+    <p>The famous bald 4 year old is back, and now in THUG Pro. Created by Garfield</p>
+    <a href="/Caillou.SKA">Download Caillou</a>
+     <p>Ricky Berwick Skater</p>
+    <img src="submission7.png" alt="errorreading.png" />
+    <p>The famous bald 4 year old is back, and now in THUG Pro. Created by Garfield</p>
+    <a href="/Ricky Berwick.SKA">Download Ricky Berwick</a>
   </body>
 </html>
