--- a/thugprocas.html
+++ b/thugprocas.html
@@ -7,6 +7,7 @@
   <body>
     <h1>THUG Pro Create a Skater Archive</h1>
     <p>NOTE: You will have to rebind special tricks. Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
+    <input id="dynatable-query-search-ul-example" type=search data-dynatable-query="search">
     <p>Garfield Skater</p>
     <img src="submission1.png" alt="Image not found." />
     <p>The big-boned orange cat is now in THUG Pro! Created by Garfield</p>
