--- a/thugprocas.html
+++ b/thugprocas.html
@@ -7,6 +7,7 @@
   <body>
     <h1>THUG Pro Create a Skater Archive</h1>
     <p>NOTE: You will have to rebind special tricks. Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
+    <span id="dynatable-query-search-ul-example" class="dynatable-search">
     <input id="dynatable-query-search-ul-example" type=search data-dynatable-query="search">
     <p>Garfield Skater</p>
     <img src="submission1.png" alt="Image not found." />
@@ -34,7 +35,7 @@
     <a href="/Caillou.SKA">Download Caillou</a>
      <p>Ricky Berwick Skater</p>
     <img src="submission7.png" alt="Image not found." />
-    <p>The famous bald 4 year old is back, and now in THUG Pro. Created by Garfield</p>
+    <p>The famous handicapped man is in THUG Pro. Very funny looking. Created by Garfield</p>
     <a href="/Ricky Berwick.SKA">Download Ricky Berwick</a>
   </body>
 </html>
