--- a/thugprocas.html
+++ b/thugprocas.html
@@ -8,6 +8,7 @@
     <h1>THUG Pro Create a Skater Archive</h1>
     <p>NOTE: You will have to rebind special tricks. Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
     <span id="dynatable-query-search-ul-example" class="dynatable-search">
+Search:
     <input id="dynatable-query-search-ul-example" type=search data-dynatable-query="search">
     <p>Garfield Skater</p>
     <img src="submission1.png" alt="Image not found." />
