--- a/thugprocas.html
+++ b/thugprocas.html
@@ -7,11 +7,6 @@
   <body>
     <h1>THUG Pro Create a Skater Archive</h1>
     <p>NOTE: You will have to rebind special tricks. Put .SKA and/or .PRK files in %localappdata%\THUG Pro\Save</p>
-    <div class="input-wrapper">
-    <div class="fa fa-search"></div>
-    <input type="text" placeholder="Search" />
-    <div class="fa fa-times"></div>
-    </div>
     <span id="dynatable-query-search-ul-example" class="dynatable-search">
 Search:
     <input id="dynatable-query-search-ul-example" type=search data-dynatable-query="search">
@@ -43,5 +38,11 @@ Search:
     <img src="submission7.png" alt="Image not found." />
     <p>The famous handicapped man is in THUG Pro. Very funny looking. Created by Garfield</p>
     <a href="/Ricky Berwick.SKA">Download Ricky Berwick</a>
+<div>
+    <div class="input-wrapper">
+    <div class="fa fa-search"></div>
+    <input type="text" placeholder="Search" />
+    <div class="fa fa-times"></div>
+    </div>
   </body>
 </html>
