--- a/thugprocas.html
+++ b/thugprocas.html
@@ -34,6 +34,10 @@ Search:
     <img src="submission6.png" alt="Image not found." />
     <p>The famous bald 4 year old is back, and now in THUG Pro. Created by Garfield</p>
     <a href="/Caillou.SKA">Download Caillou</a>
+    <p>Among Us Red Skater</p>
+    <img src="submission8.png" alt="Image not found." />
+    <p>Is red truly sus? Created by Garfield</p>
+    <a href="/Red Imposter.SKA">Download Among Us Red</a>
      <p>Ricky Berwick Skater</p>
     <img src="submission7.png" alt="Image not found." />
     <p>The famous handicapped man is in THUG Pro. Very funny looking. Created by Garfield</p>
