--- a/thugprocas.html
+++ b/thugprocas.html
@@ -45,6 +45,6 @@ Search:
      <p>Backwards skater</p>
     <img src="submission9.png" alt="Image not found." />
     <p>Backwards skater with upside down board MALE. Created by Garfield</p>
-    <a href="/Ricky Berwick.SKA">Download Ricky Berwick</a>
+    <a href="/ReversedSAndB M.SKA">Download Backwards skater</a>
   </body>
 </html>
