--- a/thugprocas.html
+++ b/thugprocas.html
@@ -42,9 +42,21 @@ Search:
     <img src="submission7.png" alt="Image not found." />
     <p>The famous handicapped man is in THUG Pro. Very funny looking. Created by Garfield</p>
     <a href="/Ricky Berwick.SKA">Download Ricky Berwick</a>
-     <p>Backwards skater</p>
+     <p>Backwards Skater</p>
     <img src="submission9.png" alt="Image not found." />
     <p>Backwards skater with upside down board MALE. Created by Garfield</p>
-    <a href="/ReversedSAndB M.SKA">Download Backwards skater</a>
+    <a href="/ReversedSAndB M.SKA">Download Backwards Skater MALE</a>
+    <p>Beetlejuice Skater</p>
+    <img src="submission11.png" alt="Image not found." />
+    <p>Description not given. Created by Rocky</p>
+    <a href="/Beetlejuice.SKA">Download Beetlejuice</a>
+    <p>Michael Scott Skater</p>
+    <img src="submission12.png" alt="Image not found." />
+    <p>Description not given. Created by Rocky</p>
+    <a href="/Michael Scott.SKA">Download Michael Scott</a>
+    <p>Big Floppa Skater</p>
+    <img src="submission10.png" alt="Image not found." />
+    <p>Description not given. Created by Garfield</p>
+    <a href="/Michael Scott.SKA">Download Michael Scott</a>
   </body>
 </html>
